# docs/swagger.json
@@ -314,7 +314,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Order"
+                                "$ref": "#/definitions/models.SwagOrder"
                             }
                         }
                     },
@@ -363,7 +363,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.SwagOrder"
                         }
                     }
                 ],
@@ -424,7 +424,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.SwagOrder"
                         }
                     },
                     "400": {
@@ -1079,11 +1079,28 @@
                 "category": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
                 "price": {
                     "type": "number"
+                }
+            }
+        },
+        "models.SwagOrder": {
+            "type": "object",
+            "properties": {
+                "qunatity": {
+                    "type": "integer"
+                },
+                "table": {
+                    "type": "integer"
+                },
+                "user": {
+                    "type": "integer"
                 }
             }
         },
